<resources>
    <string name="app_name">Foodney</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="list_warung">List Warung</string>
    <string name="papan_peringkat">Papan Peringkat</string>
    <string name="kupon">Kupon</string>
    <string name="profil">Profil</string>
    <string name="second_onboard">Selesaikan misi dan dapatkan hadiah menarik</string>
    <string name="third_onboard">Tunggu apalagi, \nAyo mulai bermain!</string>
    <string name="start">Let’s Started</string>
    <string name="first_onboard">Kulineran sambil menyelesaikan misi</string>
    <string name="create_account">Buat Akun</string>
    <string name="or_signup_with">Atau daftar dengan</string>
    <string name="next">Selanjutnya</string>
    <string name="masuk">Masuk</string>
    <string name="ayo_mulai">Ayo Mulai</string>
    <string name="app_logo">app_logo</string>
    <string name="avatar">avatar</string>
    <string name="home_title">Ayo berkeliling dan makan!</string>
    <string name="star">star</string>
    <string name="vertical_line">vertical_line</string>
    <string name="total_point">Total Point</string>
    <string name="level">Level</string>
    <string name="misi">Misi</string>
    <string name="arrow_right">arrow_right</string>
    <string name="umkm_image">umkm_image</string>
    <string name="location">Location</string>
    <string name="coin">Coin</string>
    <string name="mission_reward">+ %d</string>
    <string name="distance">%d Meter</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="kata_sandi_repeat">Ulang Kata Sandi</string>
    <string name="beli_kupon">Beli Kupon</string>
    <string name="kupon_saya">Kupon Saya</string>
    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="location_required_error">Location services must be enabled for this game.</string>

    <string name="permission_denied_explanation">
        You need to grant location permission in order to play this game.
    </string>
    <string name="settings">Settings</string>
    <string name="location_setting_off">Please turn on device location in Settings and try again.
    </string>

    <!--    Geofence Status Strings-->
    <string name="geofences_added">Geofence for %s activated.</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofence_entered">Geofence entered.</string>
    <string name="geofence_over">You have found the treasure! Congratulations!</string>

    <!-- Notification Strings-->
    <string name="channel_name">GeofenceStatus</string>
    <string name="content_text">Yey!! Kamu sedang berada di %s klaim poinmu sekarang.</string>
    <string name="notification_channel_description">Geofence status notification</string>

    <string name="geofences_not_removed">Geofences not removed.</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="geofence_error">There was an error in finding your restaurant</string>
    <string name="arrived_result_text">Anda berada pada wilayah %s</string>
    <string name="foto">Foto</string>
    <string name="ulasan">Ulasan</string>
    <string name="star_rating">Total <b>%.1f</b></string>
    <string name="pergi">Pergi</string>
    <string name="claim_dialog_text">Selamat Anda berhasil menyelesaikan misi</string>
    <string name="kembali">Kembali</string>
    <string name="sukses">Sukses</string>
    <string name="claim">Klaim</string>
    <string name="daftar">Daftar</string>
    <string name="next_mission">Misi selanjutnya</string>
    <string name="coupon_price">- %d</string>
    <string name="three_digit_delim">%,d</string>
    <string name="leaderboard_user_level">Lv. %d</string>
    <string name="prototype_info_dialog">Aplikasi akan mendeteksi lokasi dan memunculkan notifikasi ketika memasuki radius lokasi. Anda dapat menggunakan Aplikasi Fake GPS atau untuk keperluan testing dapat menekan tombol merah untuk langsung mengklaim poin.</string>
    <string name="info_scan_objective">Beli menu apa aja, lalu pindai kode QR dari kasir</string>
    <string name="pindai">Pindai</string>
    <string name="scan_mission_objective_success">Selamat Anda berhasil menyelesaikan misi dan mendapatkan reward tambahan</string>
    <string name="back_to_home">Kembali ke Beranda</string>
    <string name="success">Sukses</string>
</resources>