<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="64dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_rounded_background"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="42dp">

        <TextView
            android:id="@+id/tv_dialog_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_dollar_circle"
            tools:text="+ 30"
            android:textSize="26sp"
            android:textColor="@color/purple"
            android:fontFamily="@font/poppins_medium"
            android:drawablePadding="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sukses"
            android:textAlignment="center"
            style="@style/heading2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/claim_dialog_text"
            android:textAlignment="center"
            style="@style/body1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_positive_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/pergi"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_medium"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            app:cornerRadius="24dp"
            android:layout_marginTop="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_negative_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/kembali"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_medium"
            android:backgroundTint="@color/dark_grey"
            android:textColor="@color/white"
            app:cornerRadius="24dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>