<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.mainScreens.home.HomeFragment">

    <data>
        <variable
            name="viewModel"
            type="com.raion.foodney.ui.mainScreens.MainViewModel" />
        <variable
            name="profile"
            type="com.raion.foodney.models.Profile" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/header_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/iv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_avatar"
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:src="@drawable/iv_avatar"
             android:contentDescription="@string/avatar"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="100dp"
             android:layout_marginStart="24dp"
             app:layout_constraintTop_toTopOf="parent"/>-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/header_icon"
            android:layout_marginTop="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/avatar"
                    android:src="@drawable/iv_avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_home_title"
                    style="@style/heading3"
                    android:layout_width="227dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/home_title"
                    app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
                    app:layout_constraintStart_toEndOf="@id/iv_avatar"
                    app:layout_constraintTop_toTopOf="@id/iv_avatar" />

                <ImageView
                    android:id="@+id/iv_star"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="12dp"
                    android:contentDescription="@string/star"
                    android:src="@drawable/iv_star"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_home_title" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/wallet"
                    android:layout_width="360dp"
                    android:layout_height="150dp"
                    android:background="@drawable/iv_wallet_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_star">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/iv_vertical_line"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_point"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/tv_point"
                            style="@style/heading2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@{profile.coins}"
                            tools:text="9876" />
                    </LinearLayout>


                    <ImageView
                        android:id="@+id/iv_vertical_line"
                        android:layout_width="1dp"
                        android:layout_height="64dp"
                        android:contentDescription="@string/vertical_line"
                        android:src="@drawable/iv_vertical_line"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/iv_vertical_line"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/level"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/tv_level"
                            style="@style/heading2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@{profile.level}"
                            tools:text="45" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_mission"
                    style="@style/heading3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/misi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/wallet" />

                <ImageView
                    android:id="@+id/iv_arrow"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/arrow_right"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="@id/tv_mission"
                    app:layout_constraintStart_toEndOf="@id/tv_mission"
                    app:layout_constraintTop_toTopOf="@id/tv_mission"
                    app:tint="@color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:clipToPadding="false"
                    warungMissionList="@{viewModel.missionList}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_mission"
                    app:layout_constraintTop_toBottomOf="@id/tv_mission"
                    tools:listitem="@layout/item_layout_mission" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>