<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.raion.foodney.ui.mainScreens.MainViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.mainScreens.scanCamera.CameraFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:paddingStart="16dp">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="56dp"
                    android:src="@drawable/iv_arrow_left"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <TextView
                    style="@style/heading2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:text="Pindai Kode QR"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.budiyev.android.codescanner.CodeScannerView
                android:id="@+id/viewFinder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:autoFocusButtonVisible="true"
                app:flashButtonPaddingHorizontal="240dp"
                app:flashButtonPaddingVertical="64dp"
                app:frameAspectRatioHeight="1"
                app:frameAspectRatioWidth="1"
                app:frameCornersRadius="40dp"
                app:frameCornersSize="50dp"
                app:frameSize="0.75"
                app:frameVisible="false"
                app:maskColor="#77000000" />

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scan_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <ImageView
                android:id="@+id/logo_header"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/iv_logo"
                android:importantForAccessibility="no"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/iv_arrow_left"
                android:importantForAccessibility="no"
                app:layout_constraintTop_toTopOf="@id/logo_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/logo_header"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/logo_header"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:layout_marginTop="64dp"
                    android:src="@drawable/iv_scan_info"/>

                <TextView
                    android:id="@+id/tv_scan_reward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/mission_reward(viewmodel.currentMission.coinReward)}"
                    tools:text="+ 30"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    style="@style/heading1"
                    app:drawableStartCompat="@drawable/ic_dollar_circle"
                    android:drawablePadding="8dp"/>

                <TextView
                    android:id="@+id/tv_scan_mission_objective"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_scan_objective"
                    android:textAlignment="center"
                    style="@style/heading3"
                    android:layout_marginTop="8dp"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"/>

                <TextView
                    android:id="@+id/tv_scan_mission_objective_success"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_mission_objective_success"
                    android:textAlignment="center"
                    style="@style/caption"
                    android:visibility="gone"
                    android:layout_marginTop="8dp"
                    android:paddingStart="64dp"
                    android:paddingEnd="64dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_scan"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/pindai"
                    app:cornerRadius="22dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    app:backgroundTint="@color/black"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:fontFamily="@font/poppins_semi_bold"/>
            </LinearLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>